# Bewise_ai_questions_api

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
data/: config.py  db.py
migrations/: env.py
migrations/versions/: 3c26c0dac573_.py  6a24ade57e6b_.py
questions/: engine.py  models.py  router.py  schemas.py
questions_api/: engine.py  router.py  schemas.py
