[tool.poetry]
name = "bewise-ai"
version = "0.1.0"
description = ""
authors = ["Timur <81976283+mym1chelle@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "bewise_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.15"}
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
asyncpg = "^0.27.0"
aiohttp = "^3.8.4"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[tool.pytest.ini_options]
asyncio_mode='auto'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
